# AvaAGENT

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.yml  flow.md  package.json
.github/workflows/: ci-cd.yml  security.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 63cbf00cf5db_initial_tables.py  f574099d2aa7_create_models.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  agents.py  ai.py  commerce.py  data.py  health.py  intents.py  payments.py  wallets.py
backend/app/core/: __init__.py  config.py  database.py  logging.py  security.py
backend/app/models/: __init__.py  agent.py  base.py  data_request.py  intent.py  transaction.py  wallet.py
backend/app/services/: __init__.py  agent_service.py  ai_service.py  blockchain_service.py  reap_service.py  turf_service.py  wallet_service.py  x402_service.py
backend/tests/: conftest.py  test_agents.py  test_ai.py
contracts/: .env.example  DEPLOYMENT.md  README.md  foundry.toml  setup.ps1  slither.config.json
contracts/script/: Deploy.s.sol
contracts/src/intents/: IntentProcessor.sol
contracts/src/interfaces/: IAgentRegistry.sol  IAvaAgentWallet.sol
contracts/src/payments/: X402PaymentFacilitator.sol
contracts/src/registry/: AgentRegistry.sol
contracts/src/wallet/: AvaAgentWallet.sol  AvaAgentWalletFactory.sol
docs/: ARCHITECTURE.md  DEPLOYMENT.md  SDK_GUIDE.md  THREAT_MODEL.md
frontend/: .dockerignore  .env.example  Dockerfile  next.config.js  package.json  tailwind.config.ts  vitest.config.ts
frontend/src/: middleware.ts
frontend/src/__tests__/: setup.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/hooks/: use-ai-chat.ts  use-toast.ts  use-wallet.ts
nginx/: nginx.conf  nginx.production.conf
scripts/: demo.py  deploy-production.ps1  deploy-production.sh  deploy.bat  deploy.sh  init-db.sql  load_test.py  run_demo.bat  run_demo.sh  seed_agents.py
(+86 files in other folders)
